@@ -1769,6 +1769,8 @@ PeersView.BlockView.AvailCount=Availability Count
 MyTorrentsView.dialog.NumberError.title=Invalid or Unrecognized Number
 MyTorrentsView.dialog.NumberError.text=The number you entered is invalid or unrecognized.
 MyTorrentsView.menu.manual=&Manual...
+MyTorrentsView.menu.manual.per_torrent=Manual (per torrent)
+MyTorrentsView.menu.manual.shared_torrents=Manual (across torrents)
 MyTorrentsView.dialog.setSpeed.title=Set %1 speed
 # %1 = "in kbps" or ""; %2 = "upload" or "download"
 MyTorrentsView.dialog.setNumber.text=Enter a number %1 to change %2 to:
